working on poster

--- a/kathmandu/kathmandu.tex
+++ b/kathmandu/kathmandu.tex
@@ -55,11 +55,11 @@
 
 \usepackage{booktabs} % Top and bottom rules for tables
 
-\title{Estimates of COVID19 Excess Deaths in New Zealand that Account for Demographic Trends}
+\title{Estimates of COVID-19 Excess Deaths in New Zealand that Properly Account for Demographic Trends}
 
 \author{John Bryant$^1$, Kim Dunstan$^2$, Pubudu Senanayake$^2$, Lucianne Varn$^2$, and Junni Zhang$^3$}
 
-\institute{$^{1}$Bayesian Demograpy Limited, $^{2}$Statistics New Zealand, $^{3}$Peking University}
+\institute{$^{1}$Bayesian Demography Limited, $^{2}$Statistics New Zealand, $^{3}$Peking University}
 
 %----------------------------------------------------------------------------------------
 
@@ -85,7 +85,7 @@
 
 \begin{alertblock}{Objectives}
 
-Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 19 epidemic that
+Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID-19 epidemic that
 \begin{itemize}
 \item account for differences by age, sex, and season,
 \item include measures of uncertainty, and
@@ -98,9 +98,9 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 
 \begin{block}{Background}
 
   \begin{itemize}
-  \item New Zealand closed borders and imposed strict lockdowns during COVID
-  \item Disagreement over number of excess deaths
-  \item Existing estimates do not properly account for demographic trends, eg age differences, pre-existing trends, seasonal effects, population change
+  \item New Zealand closed borders and imposed strict lockdowns during COVID-19
+  \item Debate over number of excess deaths
+  \item Existing estimates do not properly account for demographic trends, e.g.  age-sex differentials, pre-existing trends, seasonal effects, population change
  \end{itemize}
 
 \end{block}
@@ -166,7 +166,7 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 
 
 \begin{figure}
 \includegraphics[width = \linewidth]{fig_calc_excess}
-\caption{Calculation of monthly excess deaths: forecasted deaths are substracted from actual deaths}
+\caption{Calculation of monthly excess deaths: forecasted deaths are subtracted from actual deaths}
 \end{figure}
 
 \end{alertblock} 
@@ -187,7 +187,7 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 
   
 \begin{block}{Conclusion}
   \begin{itemize}
-  \item Monthly excess between -500 and 1000, with 2022--2023 higher than 2000--2021
+  \item Monthly excess deaths between -500 and 1000, with 2022--2023 higher than 2020--2021
   \item Excess deaths concentrated among older people
   \end{itemize}
 \end{block}
@@ -195,7 +195,7 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 
 \begin{block}{Notes}
 \begin{itemize}
 \item Work in progress, and results are provisional
-\item Statistical models were implemented using R package \textbf{bage}
+\item Statistical models implemented using R package \textbf{bage}
 \end{itemize}
 \end{block}
 
@@ -204,7 +204,7 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID 
 
 \begin{alertblock}{Contact Information}
   john@bayesiandemography.com
-  Who else?
+  kim.dunstan@stats.govt.nz
 \end{alertblock}
 
 %----------------------------------------------------------------------------------------
