added population and deaths to mid 2024

--- a/kathmandu/kathmandu.tex
+++ b/kathmandu/kathmandu.tex
@@ -150,7 +150,7 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID-
 \begin{block}{Excess Deaths by Age}
 \begin{figure}
 \includegraphics[width = 0.9 \linewidth]{fig_excess_age}
-\caption{Cumulative excess deaths, by age group, by year. Note that data for 2023 are incomplete.}
+\caption{Excess deaths, by age group, by year}
 \end{figure}
 \end{block}
 
@@ -187,7 +187,8 @@ Obtain new estimates for excess deaths in Aotearoa New Zealand during the COVID-
   
 \begin{block}{Conclusion}
   \begin{itemize}
-  \item Monthly excess deaths between -500 and 1000, with 2022--2023 higher than 2020--2021
+  \item Monthly excess deaths between -500 and 1000
+  \item Annual excess deaths in 2022--2023 higher than 2020--2021
   \item Excess deaths concentrated among older people
   \end{itemize}
 \end{block}
