--- a/README.Rmd
+++ b/README.Rmd
@@ -26,4 +26,4 @@ Estimates constructed using package [bage](https://github.com/bayesiandemography
 - `data` All input data
 - `src` All code
 - `out` Intermediate and final results
-- `panz` Presentation for Population Association of New Zealand conference
+- `old_files` Earlier presentations and analyses
